--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.stkcontrol/com.example.stkcontrol.HelloApplication</mainClass>
+                            <mainClass>com.example.stkcontrol/com.example.stkcontrol.Application</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
